# FoodVision-AI

./: .env.compose.example  .gitignore  ModelTraining.ipynb  Readme.md  docker-compose.yml  package-lock.json  production_feature_tips.md  render.yaml  sources.txt  vercel.json
.github/workflows/: cron-healthcheck.yml
Backend/: .dockerignore  DOCKER_IMPROVEMENTS_GUIDE.md  Dockerfile  app.py  main.py  name.py  pyproject.toml  requirements.txt  setup_classes.py
Backend/app/: __init__.py  calorie_database.py  config.py  image_processing.py  prediction_service.py  resources.py  routes.py
app/: layout.tsx  page.tsx
app/api/cron/: route.ts
data processing/: setupdataset.ipynb
evaluation/model-version0.1/: training_logs.csv
frontend/: Dockerfile
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: KeepAlivePing.tsx
model_Training-Finetuning/: food-vision101.ipynb
